--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "connect-mongo": "^1.0.2",
     "crypto": "^0.0.3",
     "errorhandler": "^1.4.2",
+    "escape-html": "^1.0.3",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
     "jade": "^1.11.0",
