--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "bootstrap": "~3.3.6",
     "jade": "~1.11.0",
     "jquery": "~2.1.4",
-    "OwlCarousel": "owl-carousel#~1.3.2"
+    "OwlCarousel": "owl-carousel#~1.3.2",
+    "react": "~0.14.6"
   }
 }
