--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "OwlCarousel": "owl-carousel#~1.3.2",
     "react": "~0.14.6",
     "lf-ng-md-file-input": "~1.3.0",
-    "angular": "~1.5.0"
+    "angular": "~1.5.0",
+    "sweetalert": "~1.1.3"
   }
 }
