--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,8 @@
     "react": "~0.14.6",
     "lf-ng-md-file-input": "~1.3.0",
     "angular": "~1.5.0",
-    "sweetalert": "~1.1.3"
+    "sweetalert": "~1.1.3",
+    "Chart.js": "~2.0.2",
+    "angular-chart.js": "~0.10.0"
   }
 }
