--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "freelance",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "dependencies": {
     "async": "^2.0.0-rc.2",
@@ -12,14 +11,15 @@
     "errorhandler": "^1.4.2",
     "escape-html": "^1.0.3",
     "express": "^4.13.3",
-    "express-session": "^1.12.1",
+    "express-session": "*",
     "jade": "^1.11.0",
     "mime": "^1.3.4",
     "mongodb": "^2.1.2",
     "mongoose": "^4.3.2",
     "multer": "^1.1.0",
     "nconf": "^0.8.2",
-    "node-sass-middleware": "^0.9.7",
+    "node-sass-middleware": "*",
+    "nodemailer": "^2.3.2",
     "path": "^0.12.7",
     "util": "^0.10.3"
   },
@@ -28,5 +28,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/matrosovN/freelance-app.git"
+  },
+  "bugs": {
+    "url": "https://github.com/matrosovN/freelance-app/issues"
+  },
+  "homepage": "https://github.com/matrosovN/freelance-app#readme",
+  "description": ""
 }
