--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "path": "^0.12.7",
     "util": "^0.10.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-sass": "^2.3.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
