--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "angular": "~1.5.0",
     "sweetalert": "~1.1.3",
     "Chart.js": "~2.0.2",
-    "angular-chart.js": "~0.10.0"
+    "angular-chart.js": "~0.10.0",
+    "ng-websocket": "^0.2.1"
   }
 }
